--- a/package.json
+++ b/package.json
@@ -1,12 +1,14 @@
 {
   "dependencies": {
+    "@supabase/supabase-js": "^2.38.6",
+    "cheerio": "^1.1.2",
     "cors": "^2.8.5",
     "dotenv": "^17.2.0",
     "express": "^5.1.0",
     "express-session": "^1.18.2",
+    "node-fetch": "^2.7.0",
     "nodemailer": "^7.0.5",
-    "stripe": "^18.3.0",
-    "@supabase/supabase-js": "^2.38.6"
+    "stripe": "^18.3.0"
   },
   "name": "catfish-stripe-backend",
   "version": "1.0.0",
